# large-datasets-visualization-methods

./: .gitignore  README.md  first_steps-Copy1.ipynb  first_steps.ipynb  utils.py
LargeVis/: CMakeLists.txt
LargeVis/Examples/mnist2/: mnist_2D_1.txt  mnist_2D_original.txt  mnist_2D_v1.txt  mnist_784D_1.txt
LargeVis/Linux/: LargeVis  LargeVis.cpp  LargeVis.h  compile.sh  plot.sh  run.sh
